edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/event_fault_type.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/vehicle_registration_identification.proto";

// Represents the content of the EF_Events_Data file, which contains a log of
// events related to the tachograph system.
//
// The file structure is specified in Appendix 2, Section 4.2.1.
//
//     EF Events_Data
//     └─CardEventData
//
// The data type `CardEventData` is specified in the Data Dictionary, Section 2.19.
//
// ASN.1 Specification:
//
//     CardEventData ::= SEQUENCE (SIZE(6)) OF
//         cardEventRecords SET SIZE(NoOfEventsPerType) OF CardEventRecord
//
message EventsData {
  // Represents a single event record.
  //
  // The data type `CardEventRecord` is specified in the Data Dictionary, Section 2.20.
  //
  // ASN.1 Specification:
  //
  //     CardEventRecord ::= SEQUENCE {
  //         eventType EventFaultType,
  //         eventBeginTime TimeReal,
  //         eventEndTime TimeReal,
  //         eventVehicleRegistration VehicleRegistrationIdentification
  //     }
  message Record {
    // If true, the fields below are populated with parsed, semantic data.
    // If false, the 'raw_data' field contains the original, unprocessed record
    // bytes.
    bool valid = 1;

    // --- Fields for a valid record (when valid = true) ---

    // ASN.1 Type: EventFaultType (see DD 2.70)
    datadictionary.v1.EventFaultType event_type = 2;
    

    // ASN.1 Type: TimeReal (see DD 2.162)
    //
    //     TimeReal ::= INTEGER (0..2^32-1)
    google.protobuf.Timestamp event_begin_time = 4;

    // ASN.1 Type: TimeReal (see DD 2.162)
    //
    //     TimeReal ::= INTEGER (0..2^32-1)
    google.protobuf.Timestamp event_end_time = 5;

    // ASN.1 Type: VehicleRegistrationIdentification (see DD 2.166)
    datadictionary.v1.VehicleRegistrationIdentification event_vehicle_registration = 6;

    // --- Field for a non-valid record (when valid = false) ---
    // Holds the raw 24 bytes of the original record.
    bytes raw_data = 7;
  }

  repeated Record records = 1;

  // Digital signature for the EF_Events_Data file content.
  bytes signature = 2;
}
